<resources>
    <string name="app_name">CliMan</string>
    <string name="app_main_screen">Sign in</string>
    <string name="app_main_screen_title">CRM Application</string>
    <string name="app_main_desc">A sample app to showcase Cognito Identity and the SDK for Android.</string>
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="crm_sales">CRM Sale</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Menu">Menu</string>
    <string name="pick_MFA">MFA Options</string>
    <string name="title_activity_about_app">AboutApp</string>
    <string name="about"></string>
    <string name="title_activity_sign_up_confirm">SignUpConfirm</string>
    <string name="title_activity_mfa">MFAActivity</string>
    <string name="title_activity_choose_mfa">ChooseMFA</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
    <string name="title_activity_verify">VerifyActivity</string>
    <string name="title_activity_add_attribute">AddAttributeActivity</string>
    <string name="title_activity_device_settings">DeviceSettings</string>
    <string name="title_activity_new_password">NewPassword</string>

    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="title_activity_add_location">AddLocation</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="finance">Finance</string>
    <string name="hr">HR</string>
    <string name="management">Management</string>
    <string name="sales">Sales</string>

    <string name="company_name">Company Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="dashboard">Dashboard</string>
    <string name="forget_password">Forget Password</string>
    <string name="powered_by">Powered by: Software Solution</string>


    <string name="emp_name">Employee Name</string>
    <string name="personal_details">Personal Details</string>
    <string name="emp_id">Employee ID</string>
    <string name="user_id">User ID</string>
    <string name="emp_bu">Business Unit</string>
    <string name="email_id">Email ID</string>
    <string name="india">India</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="designation">Designation</string>
    <string name="job_type">Job Type</string>
    <string name="job_category">Job Category</string>
    <string name="reporting_manager">Reporting Manager</string>
    <string name="phone_number">Phone Number</string>
    <string name="doj">Date Of Joining</string>
    <string name="dob">DOB</string>
    <string name="tenure">Tenure</string>
    <string name="save">SAVE</string>
    <string name="edit">EDIT</string>
    <string name="display_client">DISPLAY CLIENTS</string>
    <string name="add_client">Add Client</string>
    <string name="add_profile">Add Profile</string>
    <string name="personal_detail">Personal Details</string>
    <string name="my_profile">My Profile</string>
    <string name="faqs">FAQ\'s</string>
    <string name="logout">Logout</string>
    <string name="about_this_release">About This Release</string>
    <string name="search_profile">Search Profile</string>
    <string name="search_by">Search By</string>
    <string name="go">GO</string>
    <string name="text_search">Enter text to search</string>
    <string name="no_match_found">No Match Found</string>
    <string name="edit_your_profile">Edit your profile</string>
    <string name="job_id">Job ID</string>
    <string name="add_job">Add Job</string>
    <string name="all_jobs">All Jobs</string>
    <string name="search_job">Search Job</string>
    <string name="job_listing">Job Listing</string>
    <string name="job_title">Job Title</string>
    <string name="job_description">Job Description</string>
    <string name="job_location">Job Location</string>
    <string name="job_posted_date">Job Posted Date</string>
    <string name="job_expiry_date">Job Expiry Date</string>
    <string name="job_last_date_to_apply">Job Last Date To Apply</string>
    <string name="job_country">Job Country</string>
    <string name="job_state">Job State</string>
    <string name="job_city">Job City</string>
    <string name="job_department">Job Department</string>
    <string name="job_hiring_location">Job Hiring Location</string>
    <string name="referred_by">Referred By</string>
    <string name="announcements">Announcements</string>
    <string name="expenses">Expenses</string>
    <string name="expenses_overview">Overivew</string>
    <string name="navigation">Navigation</string>
    <string name="target_overview">Target Overview</string>
    <string name="tracking">Tracking</string>
    <string name="my_tasks">My Tasks</string>
    <string name="client">Client</string>
    <string name="new_client">New Client</string>
    <string name="existing_client">Existing Client</string>
    <string name="my_client">My Clients</string>
    <string name="follow_up_client">Follow Up Client</string>
    <string name="client_id">Client ID</string>
    <string name="client_not_available">Client Not Available</string>
    <string name="search">Search</string>
    <string name="code">code</string>
    <string name="std_code">Std Code</string>
    <string name="extension">Ext</string>
    <string name="mobile_code">+91</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="office_number">Office Number</string>
    <string name="welcome">Welcome</string>
    <string name="user">User</string>
    <!--For sales client-->
    <string name="client_name">Client Name</string>
    <string-array name="search_input">
        <item>empId</item>
        <item>emailId</item>
    </string-array>

    <string-array name="job_search_input">
        <item>@string/all_jobs</item>
        <item>@string/job_id</item>
        <item>@string/job_posted_date</item>
        <item>@string/country</item>
        <item>@string/city</item>
        <item>@string/state</item>
        <item>@string/job_department</item>
    </string-array>

    <string name="title_activity_profile">Profile</string>
    <string name="set_client_group_id">Set Client Group Id</string>
    <string name="auto_generated">Client Id will be Auto Generated</string>
    <string name="set_client_group_name">Set Client Group Name</string>

    <string name="client_group_name">Client Group Name</string>
    <string name="client_group">Client Group</string>
    <string name="client_person_details">Client Person Details</string>
    <string name="contact_person">Contact Person</string>
    <string name="client_group_code">Client Group Code</string>
    <string name="client_Company_Name">Client Company Name</string>
    <string name="client_address_first_line">Client Address First Line</string>
    <string name="client_address_second_line">Client Address Second Line</string>
    <string name="pin_code">Pin Code</string>
    <string name="client_source">Client source</string>

    <string name="date_of_contact">Date of Contact</string>
    <string name="service_required">Service Required</string>
    <string name="status">Status</string>
    <string name="comments">Comments</string>
    <string name="next_meeting_date">Next Meeting Date</string>
    <string name="next_meeting_time">Next Meeting Time</string>
    <string name="client_group_details">Client Group Details</string>

    <string name="client_company_group">Client Company Group Name</string>
    <string name="check_client_group_details">Checking Client Group Details</string>
    <string name="check">CHECK</string>
    <string name="generate">GENERATE</string>
    <string name="back">BACK</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="client_group_id">Client Group Id : </string>
    <string name="client_code_available">Client Code is available</string>
    <string name="client_code_generated">Client Code is generated</string>
    <string name="client_not_exist">Client Not Exist\n Press Generate to generate Client Group Id</string>

    <string name="next_person">Next Person</string>
    <string name="same">Same</string>
    <string name="other_person">other Person</string>
    <string name="not_required">Not Required</string>
    <string name="next_contact_person_name">Next Contact Person Name</string>
    <string name="meeting_outcome">Meeting Outcome</string>
    <string name="survey_done">Survey Done</string>
    <string name="survey_date">Survey Date</string>
    <string name="follow_up_meeting">Follow Up Meeting</string>
    <string name="next_contact_person">Next Contact Person</string>
    <string name="reference">Reference</string>
    <string name="cold_call">Cold Call</string>
    <string name="reference_emp_id">Reference Employee id</string>

    <string name="service_1">Service A</string>
    <string name="service_2">Service B</string>
    <string name="service_3">Service C</string>
    <string name="service_4">Service D</string>
    <string name="service_5">Service E</string>
    <string name="all">All</string>

    <string name="interested">Interested</string>
    <string name="not_interested">Not interested</string>

    <string name="group_id">Group Id</string>
    <string name="no_client_available">No Clients Registered</string>
    <string name="more_info">Select Each Item to get more information</string>
    <string name="client_details">Client Contact Details</string>

    <string name="preview">Preview</string>
    <string name="quote">Quote</string>

    <string name="string_permission_help">Help</string>
    <string name="string_permission_help_text">The permission is missing.\n\nTo grant this permission click on Settings, then Permissions and turn the permission on.\n\nThen click back twice to return to the app</string>
    <string name="string_permission_quit">Exit App</string>
    <string name="string_settings">Settings</string>
</resources>
