<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout android:id="@+id/client_detail_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/NormalText">

        <EditText
            android:id="@+id/clientContactPerson"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contact_person"
            android:inputType="textPersonName"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/NormalText">

        <EditText
            android:id="@+id/client_designation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/designation"
            android:inputType="textPersonName"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/NormalText">
        <EditText
            android:id="@+id/email_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_id"
            android:inputType="text"> </EditText>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            style="@style/NormalText">

            <EditText
                android:id="@+id/country_mobile_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/code"
                android:text="@string/mobile_code"

                android:inputType="phone"> </EditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_weight="10"
            android:layout_height="wrap_content"
            style="@style/NormalText">
            <EditText
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:inputType="phone"> </EditText>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            style="@style/NormalText">

            <EditText
                android:id="@+id/country_phone_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/std_code"
                android:inputType="phone"> </EditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_weight="6"
            android:layout_height="wrap_content"
            style="@style/NormalText">
            <EditText
                android:id="@+id/office_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/office_number"
                android:inputType="phone"> </EditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            style="@style/NormalText">
            <EditText
                android:id="@+id/office_extension"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/extension"
                android:inputType="phone"> </EditText>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/NormalText">
        <EditText
            android:id="@+id/client_address_first_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/client_address_first_line"
            android:inputType="text"> </EditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/NormalText">
        <EditText
            android:id="@+id/client_address_second_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/client_address_second_line"
            android:inputType="text"> </EditText>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        style="@style/NormalText">
        <AutoCompleteTextView
            android:id="@+id/country_picker_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:hint="@string/country" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        style="@style/NormalText">
        <AutoCompleteTextView
            android:id="@+id/city_picker_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:hint="@string/city"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/NormalText">
        <AutoCompleteTextView
            android:id="@+id/state_picker_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:hint="@string/state" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/NormalText">
        <AutoCompleteTextView
            android:id="@+id/pin_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:hint="@string/pin_code" />
    </com.google.android.material.textfield.TextInputLayout>


</LinearLayout>
</layout>