<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/ScrollView01"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:background="@android:color/white"
        android:paddingLeft="@dimen/layout_padding"
        android:paddingRight="@dimen/layout_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            >

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                style="@style/NormalText">

                <EditText
                    android:id="@+id/EditTextName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/emp_name"
                    android:inputType="textPersonName" >
                </EditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/NormalText">

                <EditText
                    android:id="@+id/EditTextEmpID"
                    android:layout_height="wrap_content"
                    android:hint="@string/emp_id"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    >
                </EditText>


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/NormalText">
                <EditText
                    android:id="@+id/EditTextBU"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/emp_bu"
                    android:inputType="text"> </EditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/NormalText">
                <EditText
                    android:id="@+id/EditTextEmailID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_id"
                    android:inputType="text"> </EditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                style="@style/NormalText">
                <AutoCompleteTextView
                    android:id="@+id/country_picker_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="3"
                    android:hint="@string/country" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                style="@style/NormalText">
                <AutoCompleteTextView
                    android:id="@+id/city_picker_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="3"
                    android:hint="@string/city"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                style="@style/NormalText">
                <AutoCompleteTextView
                    android:id="@+id/state_picker_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="3"
                    android:hint="@string/state" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                style="@style/NormalText">
                <EditText
                    android:id="@+id/designation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/designation"
                    android:inputType="text"> </EditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/NormalText">
                <EditText
                    android:id="@+id/job_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/job_type"
                    android:inputType="text"> </EditText>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                style="@style/NormalText">
                <EditText
                    android:id="@+id/reporting_manager"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/reporting_manager"
                    android:inputType="text"> </EditText>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    style="@style/NormalText">

                    <EditText
                        android:id="@+id/country_mobile_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/code"
                        android:text="@string/mobile_code"

                        android:inputType="phone"> </EditText>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_weight="10"
                    android:layout_height="wrap_content"
                    style="@style/NormalText">
                    <EditText
                        android:id="@+id/mobile_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone_number"
                        android:inputType="phone"> </EditText>
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    style="@style/NormalText">

                    <EditText
                        android:id="@+id/country_phone_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/std_code"
                        android:inputType="phone"> </EditText>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_weight="6"
                    android:layout_height="wrap_content"
                    style="@style/NormalText">
                    <EditText
                        android:id="@+id/office_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/office_number"
                        android:inputType="phone"> </EditText>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    style="@style/NormalText">
                    <EditText
                        android:id="@+id/office_extension"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/extension"
                        android:inputType="phone"> </EditText>
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                style="@style/NormalText">
                <EditText
                    android:id="@+id/doj"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/doj"
                    android:focusable="false"
                    android:inputType="text"> </EditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                style="@style/NormalText">

                <EditText
                    android:id="@+id/dob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dob"
                    android:focusable="false"
                    android:inputType="text"> </EditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                style="@style/NormalText">
                <EditText
                    android:id="@+id/tenure"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tenure"
                    android:inputType="text"> </EditText>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/saveButton"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:textColor="@android:color/black"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/vertical_margin"
                android:layout_width="wrap_content"
                >
            </Button>
        </LinearLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>